--- a/atividade02/src/index.html
+++ b/atividade02/src/index.html
@@ -64,16 +64,16 @@
       </div>
 
       <!--ProfileName-->
-      <div>
+      <div class="profileContainer">
         <h4 class="colorPrimary">Francisco Álisson Véras Damasceno</h4>
       </div>
 
       <!--ProfileAt-->
-      <div>
+      <div class="profileContainer">
         <h5 class="colorSecondary">@alissonveras</h5>
       </div>
 
-      <div>
+      <div class="profileContainer">
         <p class="colorPrimary">
           Android Enginner - Adjunct Professor and Researcher in Mobile
           Development @ Federal University of Ceará
@@ -81,7 +81,7 @@
       </div>
 
       <!--ProfileLocalFollows-->
-      <div>
+      <div class="profileLocalFollows">
         <!--ProfileLocalJoin-->
         <div class="divTopHypers">
           <ul class="ulTopHypers">
@@ -112,10 +112,10 @@
 
     <!--Publications-->
     <div>
-      <a href="#">Tzeets</a>
-      <a href="#">Tzeets & replies</a>
-      <a href="#">Media</a>
-      <a href="#">Links</a>
+      <a class="typographyT1" href="#">Tzeets</a>
+      <a class="typographyT1" href="#">Tzeets & replies</a>
+      <a class="typographyT1" href="#">Media</a>
+      <a class="typographyT1" href="#">Links</a>
     </div>
 
     <!--TweetPrimary-->
@@ -132,8 +132,10 @@
 
       <!--TweetInfo-->
       <div>
-        <p class="colorPrimary">Lebron James</p>
-        <p class="colorSecondary">@lebronjames Oct 21, 2021</p>
+        <div class="boxFlex">
+          <p class="colorPrimary">Lebron James</p>
+          <p class="colorSecondary">@lebronjames Oct 21, 2021</p>
+        </div>
         <p class="colorPrimary">
           Que tal uma partida de basquete meu irmão? Quem perder paga o almoço
           do outro. Fechou?
@@ -143,16 +145,16 @@
       <!--TweetLinks-->
       <div class="tweetLinkContainer">
         <div class="tweetLinkSubContainer tweetLinkSubContainerReplyShare">
-          <a href="#" class="tweetLinkText tweetLinkReplyShare">Reply</a>
+          <a href="#" class="typographyT1 tweetLinkReplyShare">Reply</a>
         </div>
         <div class="tweetLinkSubContainer tweetLinkSubContainerReplyShare">
-          <a href="#" class="tweetLinkText tweetLinkReplyShare">Retzeet</a>
+          <a href="#" class="typographyT1 tweetLinkReplyShare">Retzeet</a>
         </div>
         <div class="tweetLinkSubContainer tweetLinkSubContainerRetzeet">
-          <a href="#" class="tweetLinkText tweetLinkRetzeet">Like</a>
+          <a href="#" class="typographyT1 tweetLinkRetzeet">Like</a>
         </div>
         <div class="tweetLinkSubContainer tweetLinkSubContainerLike">
-          <a href="#" class="tweetLinkText tweetLinkLike">Share</a>
+          <a href="#" class="typographyT1 tweetLinkLike">Share</a>
         </div>
       </div>
     </div>
@@ -171,8 +173,10 @@
 
       <!--TweetInfo-->
       <div>
-        <p class="colorPrimary">Nicolas Cage</p>
-        <p class="colorSecondary">@nicolascage Oct 21, 2021</p>
+        <div class="boxFlex">
+          <p class="colorPrimary">Nicolas Cage</p>
+          <p class="colorSecondary">@nicolascage Oct 21, 2021</p>
+        </div>
         <p class="colorPrimary">
           Já perceberam que é sempre após uma boa partida de basquete que dá uma
           fome gigantesca? Ou é só comigo?
@@ -182,16 +186,16 @@
       <!--TweetLinks-->
       <div class="tweetLinkContainer">
         <div class="tweetLinkSubContainer tweetLinkSubContainerReplyShare">
-          <a href="#" class="tweetLinkText tweetLinkReplyShare">Reply</a>
+          <a href="#" class="typographyT1 tweetLinkReplyShare">Reply</a>
         </div>
         <div class="tweetLinkSubContainer tweetLinkSubContainerReplyShare">
-          <a href="#" class="tweetLinkText tweetLinkReplyShare">Retzeet</a>
+          <a href="#" class="typographyT1 tweetLinkReplyShare">Retzeet</a>
         </div>
         <div class="tweetLinkSubContainer tweetLinkSubContainerRetzeet">
-          <a href="#" class="tweetLinkText tweetLinkRetzeet">Like</a>
+          <a href="#" class="typographyT1 tweetLinkRetzeet">Like</a>
         </div>
         <div class="tweetLinkSubContainer tweetLinkSubContainerLike">
-          <a href="#" class="tweetLinkText tweetLinkLike">Share</a>
+          <a href="#" class="typographyT1 tweetLinkLike">Share</a>
         </div>
       </div>
     </div>
